// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineEndStyle renders 0 1`] = `
Array [
  .c0 {
  border-inline-end-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders function 1`] = `
Array [
  .c0 {
  border-inline-end-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders negative number 1`] = `
Array [
  .c0 {
  border-inline-end-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-inline-end-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-inline-end-style: July;
}

@media May {
  .c0 {
    border-inline-end-style: August;
  }
}

@media April {
  .c0 {
    border-inline-end-style: September;
  }
}

@media January {
  .c0 {
    border-inline-end-style: November;
  }
}

@media April {
  .c0 {
    border-inline-end-style: August;
  }
}

@media June {
  .c0 {
    border-inline-end-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: July;
}

@media May {
  .c0 {
    border-inline-end-style: August;
  }
}

@media April {
  .c0 {
    border-inline-end-style: September;
  }
}

@media January {
  .c0 {
    border-inline-end-style: November;
  }
}

@media April {
  .c0 {
    border-inline-end-style: August;
  }
}

@media June {
  .c0 {
    border-inline-end-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-style: November;
  }
}

@media April {
  .c0 {
    border-inline-end-style: January;
  }
}

@media January {
  .c0 {
    border-inline-end-style: December;
  }
}

@media April {
  .c0 {
    border-inline-end-style: April;
  }
}

@media June {
  .c0 {
    border-inline-end-style: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-style: November;
  }
}

@media April {
  .c0 {
    border-inline-end-style: January;
  }
}

@media January {
  .c0 {
    border-inline-end-style: December;
  }
}

@media April {
  .c0 {
    border-inline-end-style: April;
  }
}

@media June {
  .c0 {
    border-inline-end-style: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-inline-end-style: July;
  }
}

@media April {
  .c0 {
    border-inline-end-style: August;
  }
}

@media January {
  .c0 {
    border-inline-end-style: September;
  }
}

@media April {
  .c0 {
    border-inline-end-style: November;
  }
}

@media June {
  .c0 {
    border-inline-end-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-end-style: July;
  }
}

@media April {
  .c0 {
    border-inline-end-style: August;
  }
}

@media January {
  .c0 {
    border-inline-end-style: September;
  }
}

@media April {
  .c0 {
    border-inline-end-style: November;
  }
}

@media June {
  .c0 {
    border-inline-end-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-style: January;
  }
}

@media April {
  .c0 {
    border-inline-end-style: December;
  }
}

@media January {
  .c0 {
    border-inline-end-style: April;
  }
}

@media April {
  .c0 {
    border-inline-end-style: May;
  }
}

@media June {
  .c0 {
    border-inline-end-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-style: January;
  }
}

@media April {
  .c0 {
    border-inline-end-style: December;
  }
}

@media January {
  .c0 {
    border-inline-end-style: April;
  }
}

@media April {
  .c0 {
    border-inline-end-style: May;
  }
}

@media June {
  .c0 {
    border-inline-end-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-end-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders string 1`] = `
Array [
  .c0 {
  border-inline-end-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndStyle renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderInlineEndStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
